--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>io.github.binaryfoo</groupId>
   <artifactId>emv-bertlv</artifactId>
-  <version>0.2.0</version>
+  <version>0.2.1</version>
   <name>EMV BER-TLV Decoder</name>
   <description>
     Some decoders for the data used in EMV credit card transactions.
@@ -200,9 +200,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>commons-lang</groupId>
-      <artifactId>commons-lang</artifactId>
-      <version>2.3</version>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.18.0</version>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
